# theatredb

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
backend/: entity_management.py  models.py  scd2.py
frontend/: app.py
frontend/management/: awards.py  organizations.py  persons.py  productions.py  sources.py  texts.py  uifactory.py
frontend/views/: detail.py  helpers.py  organization.py  overview.py  production.py
